# serialtui

./: Cargo.toml  README.adoc  README.md  flake.nix
src/: command.rs  hint.rs  interface.rs  lib.rs  shell.rs  terminal.rs  ui.rs
src/command/: command_manager.rs
src/hint/: default_hint.rs
src/interface/: config.rs  prepared_protocol.rs  prepared_serial.rs  raw_protocol.rs  raw_serial.rs
src/terminal/: default_terminal.rs
src/ui/: serial_cli.rs
