[package]
name = "serialtui"
version = "0.1.3"
authors = ["dunklecat"]
edition = "2021"
description = "A TUI environment specific to serial connections"
repository = "https://github.com/dunklecat/serialtui"
license = "LGPL-2.1-or-later"
keywords = ["serial", "tui"]
categories = ["command-line-interface"]

[dependencies]
rustyline = "14"
async-trait = "0"
rustyline-derive = "0"
xdg = "2"
log = "0"
derive_builder = "0"
serialport = "4"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde-enum-str = "0.3"
enum-iterator = "1"
toml = "0"
